fixing recording concept
